# digodoc

./: .drom  .gitignore  CHANGES.md  Makefile  README.md  deploy.sh  digodoc.opam  digodoc_common.opam  digodoc_lib.opam  drom.toml  dune-project  ez_html.opam  frontend.opam  htmlize.opam  meta_file.opam  res.txt
.github/workflows/: doc-deploy.yml  workflow.yml
config/: about.html  canvas.html  fulltext_search.html  header.html  search.html  search_index.html  search_page.html  test_search_page.html
doc/: index.html
doc/digodoc/: index.html
doc/digodoc_common/: index.html
doc/digodoc_lib/: index.html
doc/ez_html/: index.html
doc/frontend/: index.html
doc/htmlize/: index.html
doc/meta_file/: index.html
docs/: index.html
html/: frontend.js  info.json
sphinx/: .buildinfo  about.html  about.rst  genindex.html  index.html  install.html  license.html  objects.inv  search.html
sphinx/.doctrees/: about.doctree  environment.pickle
sphinx/_sources/: about.rst.txt
sphinx/_static/: documentation_options.js
src/digodoc_common/: dune  globals.ml  index.mld  main.ml  package.toml  patchtml.ml  utils.ml
src/digodoc_lib/: cmt.ml  compute.ml  directory.ml  dune  globals.ml  html.ml  index.ml  index.mld  main.ml  module.ml  odoc.ml  package.toml  printer.ml  test.ml  type.ml
src/ez_html/: index.mld
src/frontend/: dune  global.ml  globals.ml  headfoot.ml  index.ml  insertion.ml  main.ml  object.ml  objects.ml  observer.ml  package.toml  query.ml  requests.ml  search.ml  searchAdvanced.ml
src/htmlize/: dune  index.mld  (+3 more)
test/: dune  patchtmltests.ml
(+114 files in other folders)
